fixes poster on safari ios

--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -25,22 +25,24 @@
     }
     
     video {
-        width: 100vw;
-        height: 100%;
+        max-height: 100%;
+        max-width: 100%;
+        min-height: 100%;
+        min-width: 100%;
+        // width: 100vw;
+        // height: 100%;
         position: relative;
         object-fit: cover;
-        margin: 0;
-        padding: 0;
-        display: block;
+        // margin: 0;
+        // padding: 0;
+        // display: block;
     }
 
     video[poster]{
-        height: 500px;
+        height: 100%;
         width: 100vw;
-        position: relative;
-        margin: 0;
-        padding: 0;
-        background: green;
+        position: absolute;
+        background-color: black;
     }
 }
 
